# FabricSlide

./: .gitignore  CMakeLists.txt  README.md  README.rst  analysis.ipynb  docker-compose.yml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
CAD/: CPM_finger.studio3  board_mount.SLDPRT  finger_mount.SLDPRT  fingersupport_panda_v1.SLDPRT  fingersupport_panda_v2.SLDPRT  fingersupport_panda_v3.SLDPRT  pivot.SLDPRT  robot_mount.SLDPRT
data/board/: Board10mm_F120_V-10mmps_0.csv  Board10mm_F120_V-20mmps_0.csv  Board10mm_F120_V-30mmps_0.csv  Board10mm_F120_V-5mmps_0.csv  Board10mm_F135_V-10mmps_0.csv  Board10mm_F135_V-20mmps_0.csv  Board10mm_F135_V-30mmps_0.csv  Board10mm_F135_V-5mmps_0.csv  Board10mm_F150_V-10mmps_0.csv  Board10mm_F150_V-20mmps_0.csv  Board10mm_F150_V-30mmps_0.csv  Board10mm_F150_V-5mmps_0.csv  Board2mm_F120_V-10mmps_0.csv  Board2mm_F120_V-20mmps_0.csv  Board2mm_F120_V-30mmps_0.csv  Board2mm_F120_V-5mmps_0.csv  Board2mm_F135_V-10mmps_0.csv  Board2mm_F135_V-20mmps_0.csv  Board2mm_F135_V-30mmps_0.csv  Board2mm_F135_V-5mmps_0.csv  Board2mm_F150_V-10mmps_0.csv  Board2mm_F150_V-20mmps_0.csv  Board2mm_F150_V-30mmps_0.csv  Board2mm_F150_V-5mmps_0.csv
docker/: Dockerfile
include/: controller.h  pcan_interface.h
matlab/HOOI/: adaptiveTactilePerception.m  encodeTensor.m  gscatter3.m  tacProcess.m  tactileEncodingHOOI.mlx
matlab/PCA/: computeCSM.m  conf_ellipsoid.m  main_exp.m  (+1 more)
python/: TacDataset.py  calibrate.py  data2mat.py  read.py  requirements.txt  tucker_coeffs.py
src/: controller.cpp  examples_common.cpp  pcan_interface.cpp  verticalSlideOnFabric.cpp
